# whisper-api-auto

./: .gitignore  README.md  app.py  format.py  gpt-format.py  gpt-old.py  gpt.py  pyproject.toml
notebooks/: gpt-format.ipynb  whisper-api-auto.ipynb
